--- a/faq.html
+++ b/faq.html
@@ -65,7 +65,7 @@
 
   <div class="section">
     <div class="container">
-      <div class="row"><img src="/images/Vinyl4.png" alt=""></div>
+      <div class="row"><img src="images/Vinyl4.png" alt=""></div>
       <div class="row">
         <div class="col-sm">
           <div class="content-section">
