--- a/browse_rap.html
+++ b/browse_rap.html
@@ -66,7 +66,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/images/hhbanner.png" alt="First slide">
+        <img class="d-block w-100" src="images/hhbanner.png" alt="First slide">
       </div>
     </div>
   </div>
@@ -85,28 +85,28 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/images/meltmyeyebanner.png" class="d-block w-100" alt="...">
+          <img src="images/meltmyeyebanner.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block" style="color: black;">
             <p>"The South Florida rapper internalizes his skeptical gaze, yielding music that’s more deliberately
               self-reflective, with few ragers or bangers." - Pitchfork</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/dondabanner.png" class="d-block w-100" alt="...">
+          <img src="images/dondabanner.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block" style="color: black;">
 
             <p>"With Donda, Kanye West Has Crafted His Most Unforgiving Self-Portrait Yet" - Slant Magazine</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/almostdrybanner.png" class="d-block w-100" alt="...">
+          <img src="images/almostdrybanner.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block" style="color: black;">
 
             <p>"Virginia legend still going strong in his rap tenure" - NME</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/lpbanner.png" class="d-block w-100" alt="...">
+          <img src="images/lpbanner.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block" style="color: black;">
 
             <p>"Another triumph from one of rap’s true creative visionaries..." - Clashmusic</p>
@@ -143,7 +143,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/Taylor_Swift_-_Folklore.png" class="card-img-top" alt="taylor swift folklore">
+          <img src="images/Taylor_Swift_-_Folklore.png" class="card-img-top" alt="taylor swift folklore">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Folklore (2020)</h5>
             <p class="card-text">by Taylor Swift</p>
@@ -153,7 +153,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/Ye_album_cover.jpg" class="card-img-top" alt="ye by kanye west">
+          <img src="images/Ye_album_cover.jpg" class="card-img-top" alt="ye by kanye west">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;"">Ye (2018)</h5>
             <p class=" card-text">by Kanye West</p>
@@ -163,7 +163,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+          <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
             <p class="card-text">by JayZ</p>
@@ -173,7 +173,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/Linkin_Park_Hybrid_Theory_Album_Cover.jpg" class="card-img-top"
+          <img src="images/Linkin_Park_Hybrid_Theory_Album_Cover.jpg" class="card-img-top"
             alt="linkin park hybrid theory">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Hybrid Theory (2000)</h5>
@@ -184,7 +184,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/Brockhampton_-_Ginger.png" class="card-img-top" alt="brockhampton ginger">
+          <img src="images/Brockhampton_-_Ginger.png" class="card-img-top" alt="brockhampton ginger">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Ginger (2019)</h5>
             <p class="card-text">Brockhampton</p>
