--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/images/salebanner2.png" alt="First slide">
+        <img class="d-block w-100" src="images/salebanner2.png" alt="First slide">
       </div>
     </div>
   </div>
@@ -88,7 +88,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/Taylor_Swift_-_Folklore.png" class="card-img-top" alt="taylor swift folklore">
+          <img src="images/Taylor_Swift_-_Folklore.png" class="card-img-top" alt="taylor swift folklore">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Folklore (2020)</h5>
             <p class="card-text">by Taylor Swift</p>
@@ -98,7 +98,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/Ye_album_cover.jpg" class="card-img-top" alt="ye by kanye west">
+          <img src="images/Ye_album_cover.jpg" class="card-img-top" alt="ye by kanye west">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;"">Ye (2018)</h5>
             <p class=" card-text">by Kanye West</p>
@@ -108,7 +108,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+          <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
             <p class="card-text">by JayZ</p>
@@ -118,7 +118,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/Linkin_Park_Hybrid_Theory_Album_Cover.jpg" class="card-img-top"
+          <img src="images/Linkin_Park_Hybrid_Theory_Album_Cover.jpg" class="card-img-top"
             alt="linkin park hybrid theory">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Hybrid Theory (2000)</h5>
@@ -129,7 +129,7 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="/images/Brockhampton_-_Ginger.png" class="card-img-top" alt="brockhampton ginger">
+          <img src="images/Brockhampton_-_Ginger.png" class="card-img-top" alt="brockhampton ginger">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Ginger (2019)</h5>
             <p class="card-text">Brockhampton</p>
@@ -151,21 +151,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/Vinyl1.png" class="d-block w-100" alt="...">
+            <img src="images/Vinyl1.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Quality Assured</h5>
               <p>30 day return policy, not satisfied?<br>Refund for cash or store credit.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/images/Vinyl2.png" class="d-block w-100" alt="...">
+            <img src="images/Vinyl2.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Browse Our Collection</h5>
               <p>Find new music or browse our catalogue for your favorite records.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/images/Vinyl3.png" class="d-block w-100" alt="...">
+            <img src="images/Vinyl3.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Need a break?</h5>
               <p>Relax and enjoy the coffee while listening to some records.</p>
@@ -196,7 +196,7 @@
     <div class="row" style="margin-top: 40px;">
       <div class="col">
         <div class="card">
-          <img src="/images/ss.png" class="card-img" alt="...">
+          <img src="images/ss.png" class="card-img" alt="...">
           <div class="card-img-overlay">
             <h5 class="card-title" style="color: black;">Coming Soon</h5>
             <h class="card-text" style="color: black;""><b>Sinn Sisamouth
