--- a/product/ye.html
+++ b/product/ye.html
@@ -86,7 +86,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/images/salebanner.png" alt="First slide">
+        <img class="d-block w-100" src="images/salebanner.png" alt="First slide">
       </div>
     </div>
   </div>
@@ -98,10 +98,10 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/images/Ye_album_cover.jpg" class="d-block w-100" alt="...">
+              <img src="images/Ye_album_cover.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="/images/yevinyl2.jpg" class="d-block w-100" alt="...">
+              <img src="images/yevinyl2.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
