--- a/browse_rap.html
+++ b/browse_rap.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="icon" type="image/x-icon" href="/images/icon.svg">
+  <link rel="icon" type="image/x-icon" href="images/icon.svg">
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Home | Vinyl & Coffee</title>
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="main.css">
   <style></style>
 
 </head>
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html" style="font-weight: bold;">Vinyl & Coffee</a>
+      <a class="navbar-brand" href="index.html" style="font-weight: bold;">Vinyl & Coffee</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,10 +45,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/faq.html">FAQ</a>
+            <a class="nav-link" href="faq.html">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Find Us</a>
+            <a class="nav-link" href="contact.html">Find Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">The Best Music Store In Town</a>
@@ -157,7 +157,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;"">Ye (2018)</h5>
             <p class=" card-text">by Kanye West</p>
-              <a href="/product/ye.html" class="btn btn-danger">On Sale!</a>
+              <a href="product/ye.html" class="btn btn-danger">On Sale!</a>
           </div>
         </div>
       </div>
@@ -178,7 +178,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Hybrid Theory (2000)</h5>
             <p class="card-text">Linkin Park</p>
-            <a href="/product/hybrid_theory.html" class="btn btn-success">In-Stock</a>
+            <a href="product/hybrid_theory.html" class="btn btn-success">In-Stock</a>
           </div>
         </div>
       </div>
@@ -188,7 +188,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Ginger (2019)</h5>
             <p class="card-text">Brockhampton</p>
-            <a href="/product/ginger.html" class="btn btn-warning">Limited Stock</a>
+            <a href="product/ginger.html" class="btn btn-warning">Limited Stock</a>
           </div>
         </div>
       </div>
