--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="icon" type="image/x-icon" href="/images/icon.svg">
+  <link rel="icon" type="image/x-icon" href="images/icon.svg">
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Home | Vinyl & Coffee</title>
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="main.css">
   <style></style>
 
 </head>
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html" style="font-weight: bold;">Vinyl & Coffee</a>
+      <a class="navbar-brand" href="index.html" style="font-weight: bold;">Vinyl & Coffee</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">Pop</a></li>
               <li><a class="dropdown-item" href="#">Rock</a></li>
-              <li><a class="dropdown-item" href="/browse_rap.html">Hip-Hop/Rap</a></li>
+              <li><a class="dropdown-item" href="browse_rap.html">Hip-Hop/Rap</a></li>
               <li><a class="dropdown-item" href="#">Dance/Electronic</a></li>
               <li><a class="dropdown-item" href="#">Indie/Alternative</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -45,10 +45,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/faq.html">FAQ</a>
+            <a class="nav-link" href="faq.html">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Find Us</a>
+            <a class="nav-link" href="contact.html">Find Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">The Best Music Store In Town</a>
@@ -102,7 +102,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;"">Ye (2018)</h5>
             <p class=" card-text">by Kanye West</p>
-              <a href="/product/ye.html" class="btn btn-danger">On Sale!</a>
+              <a href="product/ye.html" class="btn btn-danger">On Sale!</a>
           </div>
         </div>
       </div>
@@ -123,7 +123,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Hybrid Theory (2000)</h5>
             <p class="card-text">Linkin Park</p>
-            <a href="/product/hybrid_theory.html" class="btn btn-success">In-Stock</a>
+            <a href="product/hybrid_theory.html" class="btn btn-success">In-Stock</a>
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Ginger (2019)</h5>
             <p class="card-text">Brockhampton</p>
-            <a href="/product/ginger.html" class="btn btn-warning">Limited Stock</a>
+            <a href="product/ginger.html" class="btn btn-warning">Limited Stock</a>
           </div>
         </div>
       </div>
@@ -151,21 +151,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/Vinyl1.png" class="d-block w-100" alt="...">
+            <img src="images/vinyl1.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Quality Assured</h5>
               <p>30 day return policy, not satisfied?<br>Refund for cash or store credit.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/Vinyl2.png" class="d-block w-100" alt="...">
+            <img src="images/vinyl2.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Browse Our Collection</h5>
               <p>Find new music or browse our catalogue for your favorite records.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/Vinyl3.png" class="d-block w-100" alt="...">
+            <img src="images/vinyl3.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Need a break?</h5>
               <p>Relax and enjoy the coffee while listening to some records.</p>
