--- a/index.html
+++ b/index.html
@@ -151,24 +151,24 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/vinyl1.png" class="d-block w-100" alt="...">
+            <img src="images/vinly1.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Quality Assured</h5>
               <p>30 day return policy, not satisfied?<br>Refund for cash or store credit.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/vinyl2.png" class="d-block w-100" alt="...">
+            <img src="images/vinly2.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Browse Our Collection</h5>
               <p>Find new music or browse our catalogue for your favorite records.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/vinyl3.png" class="d-block w-100" alt="...">
+            <img src="images/vinlyl3.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Need a break?</h5>
-              <p>Relax and enjoy the coffee while listening to some records.</p>
+              <p>Relax and enjoy the coffee while listening to some records!</p>
             </div>
           </div>
         </div>
