--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/vinlyl3.png" class="d-block w-100" alt="...">
+            <img src="images/vinly3.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="font-weight: bold;">Need a break?</h5>
               <p>Relax and enjoy the coffee while listening to some records!</p>
