--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;"">Ye (2018)</h5>
             <p class=" card-text">by Kanye West</p>
-              <a href="neau_d_biu_web/product/ye.html" class="btn btn-danger">On Sale!</a>
+              <a href="product/ye.html" class="btn btn-danger">On Sale!</a>
           </div>
         </div>
       </div>
@@ -123,7 +123,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Hybrid Theory (2000)</h5>
             <p class="card-text">Linkin Park</p>
-            <a href="neau_d_biu_web/product/hybrid_theory.html" class="btn btn-success">In-Stock</a>
+            <a href="product/hybrid_theory.html" class="btn btn-success">In-Stock</a>
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
           <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Ginger (2019)</h5>
             <p class="card-text">Brockhampton</p>
-            <a href="neau_d_biu_web/product/ginger.html" class="btn btn-warning">Limited Stock</a>
+            <a href="product/ginger.html" class="btn btn-warning">Limited Stock</a>
           </div>
         </div>
       </div>
