--- a/browse_rap.html
+++ b/browse_rap.html
@@ -143,20 +143,19 @@
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="images/Taylor_Swift_-_Folklore.png" class="card-img-top" alt="taylor swift folklore">
+          <img src="images/acidrapcover.jpg" class="card-img-top" alt="taylor swift folklore">
           <div class="card-body">
-            <h5 class="card-title" style="font-weight: bold;">Folklore (2020)</h5>
-            <p class="card-text">by Taylor Swift</p>
-            <a href="#" class="btn btn-light">Sold Out!</a>
+            <h5 class="card-title" style="font-weight: bold;">Acid Rap (2013)</h5>
+            <p class="card-text">by Chance The Rapper</p>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card">
-          <img src="images/Ye_album_cover.jpg" class="card-img-top" alt="ye by kanye west">
+          <img src="images/damnkendrick.png" class="card-img-top" alt="ye by kanye west">
           <div class="card-body">
-            <h5 class="card-title" style="font-weight: bold;"">Ye (2018)</h5>
-            <p class=" card-text">by Kanye West</p>
+            <h5 class="card-title" style="font-weight: bold;"">Damn (2017)</h5>
+            <p class=" card-text">by Kendrick Lamar</p>
               <a href="neau_d_biu_web/product/ye.html" class="btn btn-danger">On Sale!</a>
           </div>
         </div>
@@ -192,59 +191,188 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <!-- Footer -->
-    <footer class=" text-center text-white" style="background-color:#000000;">
-      <!-- Grid container -->
-      <div class="container p-4">
 
 
-
-        <!-- Section: Text -->
-        <section class="mb-4">
-          <p>
-            Come relax and leave with a vinyl, the best place for Vinyl is Phnom Penh.
-          </p>
-        </section>
-        <!-- Section: Text -->
-
-
-        <!-- Section: Links -->
-        <section class="">
-          <!--Grid row-->
-          <div class="row">
-            <!--Grid column-->
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-              <h5 class="text-uppercase">Socials</h5>
-
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a href="#!" class="text-white">Facebook</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Instagram</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Telegram</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Email Us!</a>
-                </li>
-              </ul>
+      <div class="row">
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
             </div>
-            <!--Grid column-->
-
           </div>
-          <!--Grid row-->
-        </section>
-        <!-- Section: Links -->
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
 
       </div>
-      <!-- Grid container -->
+      <div class="row">
 
-    </footer>
-    <!-- Footer -->
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="images/4-44_album_cover.png" class="card-img-top" alt="444 jayz">
+            <div class="card-body">
+              <h5 class="card-title" style="font-weight: bold;">4:44 (2017)</h5>
+              <p class="card-text">by JayZ</p>
+              <a href="#" class="btn btn-light">Coming Soon...</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+      <!-- Footer -->
+      <footer class=" text-center text-white" style="background-color:#000000;">
+        <!-- Grid container -->
+        <div class="container p-4">
+
+
+
+          <!-- Section: Text -->
+          <section class="mb-4">
+            <p>
+              Come relax and leave with a vinyl, the best place for Vinyl is Phnom Penh.
+            </p>
+          </section>
+          <!-- Section: Text -->
+
+
+          <!-- Section: Links -->
+          <section class="">
+            <!--Grid row-->
+            <div class="row">
+              <!--Grid column-->
+              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Socials</h5>
+
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="#!" class="text-white">Facebook</a>
+                  </li>
+                  <li>
+                    <a href="#!" class="text-white">Instagram</a>
+                  </li>
+                  <li>
+                    <a href="#!" class="text-white">Telegram</a>
+                  </li>
+                  <li>
+                    <a href="#!" class="text-white">Email Us!</a>
+                  </li>
+                </ul>
+              </div>
+              <!--Grid column-->
+
+            </div>
+            <!--Grid row-->
+          </section>
+          <!-- Section: Links -->
+
+        </div>
+        <!-- Grid container -->
+
+      </footer>
+      <!-- Footer -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
