--- a/product/ginger.html
+++ b/product/ginger.html
@@ -38,7 +38,7 @@
   <link rel="icon" type="image/x-icon" href="images/icon.svg">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html" style="font-weight: bold;">Vinyl & Coffee</a>
+      <a class="navbar-brand" href="/neau_d_biu_web/index.html" style="font-weight: bold;">Vinyl & Coffee</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
