--- a/browse_all.html
+++ b/browse_all.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Find Us</a>
+            <a class="nav-link" href="https://ezakistan.github.io/neau_d_biu_web/contact.html">Find Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">The Best Music Store In Town</a>
