--- a/faq.html
+++ b/faq.html
@@ -35,7 +35,8 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">Pop</a></li>
               <li><a class="dropdown-item" href="#">Rock</a></li>
-              <li><a class="dropdown-item" href="#">Hip-Hop/Rap</a></li>
+              <li><a class="dropdown-item"
+                  href="https://ezakistan.github.io/neau_d_biu_web/browse_rap.html">Hip-Hop/Rap</a></li>
               <li><a class="dropdown-item" href="#">Dance/Electronic</a></li>
               <li><a class="dropdown-item" href="#">Indie/Alternative</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -46,10 +47,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link" href="https://ezakistan.github.io/neau_d_biu_web/faq.html">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Find Us</a>
+            <a class="nav-link" href="https://ezakistan.github.io/neau_d_biu_web/contact.html">Find Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">The Best Music Store In Town</a>
