--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   href="https://ezakistan.github.io/neau_d_biu_web/browse_rap.html">Hip-Hop/Rap</a></li>
               <li><a class="dropdown-item" href="#">Dance/Electronic</a></li>
               <li><a class="dropdown-item" href="#">Indie/Alternative</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Equipment</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -84,6 +84,8 @@
             <a href="#" class="list-group-item list-group-item-action">New Release</a>
             <a href="#" class="list-group-item list-group-item-action">Pre-owned</a>
             <a href="#" class="list-group-item list-group-item-action">Equipment/Gear</a>
+            <a href="https://ezakistan.github.io/neau_d_biu_web/browse_rap.html"
+              class="list-group-item list-group-item-action">Spotlight: Hip-Hop/Rap</a>
           </div>
         </ul>
       </div>
