--- a/product/ginger.html
+++ b/product/ginger.html
@@ -59,7 +59,7 @@
                   href="https://ezakistan.github.io/neau_d_biu_web/browse_rap.html">Hip-Hop/Rap</a></li>
               <li><a class="dropdown-item" href="#">Dance/Electronic</a></li>
               <li><a class="dropdown-item" href="#">Indie/Alternative</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Equipment</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
