--- a/browse_all.html
+++ b/browse_all.html
@@ -37,7 +37,7 @@
               <li><a class="dropdown-item" href="#">Hip-Hop/Rap</a></li>
               <li><a class="dropdown-item" href="#">Dance/Electronic</a></li>
               <li><a class="dropdown-item" href="#">Indie/Alternative</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Equipment</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
